--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 venv/
-**/__pycache__
-**/geckodriver.log
+__pycache__
+geckodriver.log
 *.egg-info
 .ipynb_checkpoints
+scratch_pad.html
+scratch_pad.ipynb
+scratch_pad.py
 
