--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+certifi==2020.6.20
+cycler==0.10.0
+kiwisolver==1.2.0
+matplotlib==3.3.2
 numpy==1.19.2
 pandas==1.1.3
+Pillow==8.0.1
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
--e git+git@github.com:david-hurley/avalanche-canada-data-analysis.git@f5343dc841e9202812180d54c1c379346df7f6e8#egg=scripts
+scipy==1.5.3
+-e git+git@github.com:david-hurley/avalanche-canada-data-analysis.git@74ec00b7c2c56f32804690121f44fe1cb28eab03#egg=scripts
+seaborn==0.11.0
 selenium==3.141.0
 six==1.15.0
 urllib3==1.25.10
