--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,34 @@
+backcall==0.2.0
 certifi==2020.6.20
 cycler==0.10.0
+decorator==4.4.2
+ipykernel==5.3.4
+ipython==7.18.1
+ipython-genutils==0.2.0
+jedi==0.17.2
+jupyter-client==6.1.7
+jupyter-core==4.6.3
 kiwisolver==1.2.0
 matplotlib==3.3.2
 numpy==1.19.2
 pandas==1.1.3
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==8.0.1
+prompt-toolkit==3.0.8
+ptyprocess==0.6.0
+Pygments==2.7.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
+pyzmq==19.0.2
 scipy==1.5.3
--e git+git@github.com:david-hurley/avalanche-canada-data-analysis.git@64fd59861bb4bcaa90e986d99bd61d613159c13f#egg=scripts
+-e git+git@github.com:david-hurley/avalanche-canada-data-analysis.git@18d41144219b54e293ec7b910af848ceb785c715#egg=scripts
 seaborn==0.11.0
 selenium==3.141.0
 six==1.15.0
+tornado==6.0.4
+traitlets==5.0.5
 urllib3==1.25.10
+wcwidth==0.2.5
